--- a/HotSystem/history.txt
+++ b/HotSystem/history.txt
@@ -1,22 +1,46 @@
-preset 2
-reload proem\
-reload proem
-reload smaract
-g 100,-100
-pro
-stop
-cgh
-plotall alst
-plotall
-movex -15
+reload
+killp
+chip name ?
+chip ?
+chip name?
+runcsv gen cal 3
+hr save
+hr load
+hr 60
+runcsv
 p 0
-plotall last
-stp
-cn
-cob 1\
-cob 1
-reload cld
-reload hrs
-lpos
-reload kdc2
 re
+runcsv cal
+stp
+cob 44
+p 2
+spc note qt20
+spc 2
+addtif
+p 20
+cob 0
+pro
+p 100
+p 10
+show opx
+kabs 0.2900v, 0.2083v
+kabs 0.244,0.066
+stop
+mark k
+reload opx
+kabs 0.2756v, 0.1393v
+preset 2
+kabs 0.2448v, 0.0662v
+show awg
+com12
+p ?
+cn
+kabs
+kabs ?
+kabs 0.3189v, 0.1848v
+kst c
+kst top
+reload proem
+cgh p
+cob ?
+reload hrs
